--- a/phpHolstedMetrics/mainwindow.ui
+++ b/phpHolstedMetrics/mainwindow.ui
@@ -45,7 +45,7 @@
     </property>
     <column>
      <property name="text">
-      <string>New Column</string>
+      <string>Операнд</string>
      </property>
     </column>
     <column>
