--- a/phpHolstedMetrics/mainwindow.ui
+++ b/phpHolstedMetrics/mainwindow.ui
@@ -6,75 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>761</height>
+    <width>642</width>
+    <height>890</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QTableWidget" name="operatorsTable">
-    <property name="geometry">
-     <rect>
-      <x>90</x>
-      <y>50</y>
-      <width>281</width>
-      <height>491</height>
-     </rect>
-    </property>
-    <column>
-     <property name="text">
-      <string>Оператор</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>f1j</string>
-     </property>
-    </column>
-   </widget>
-   <widget class="QTableWidget" name="operandsTable">
-    <property name="geometry">
-     <rect>
-      <x>420</x>
-      <y>50</y>
-      <width>271</width>
-      <height>491</height>
-     </rect>
-    </property>
-    <column>
-     <property name="text">
-      <string>Операнд</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>f2i</string>
-     </property>
-    </column>
-   </widget>
-   <widget class="QTextBrowser" name="programTextBrowser">
-    <property name="geometry">
-     <rect>
-      <x>90</x>
-      <y>550</y>
-      <width>601</width>
-      <height>151</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QTextBrowser" name="headerTextBrowser">
-    <property name="geometry">
-     <rect>
-      <x>90</x>
-      <y>0</y>
-      <width>601</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="html">
-     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0">
+     <layout class="QVBoxLayout" name="verticalLayout" stretch="1,20,5">
+      <item>
+       <widget class="QTextBrowser" name="headerTextBrowser">
+        <property name="html">
+         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 hr { height: 1px; border-width: 0; }
@@ -82,15 +28,54 @@ li.unchecked::marker { content: &quot;\2610&quot;; }
 li.checked::marker { content: &quot;\2612&quot;; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Ubuntu Sans'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:20pt;&quot;&gt;Метрика Холстеда&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-    </property>
-   </widget>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <item>
+         <widget class="QTableWidget" name="operatorsTable">
+          <column>
+           <property name="text">
+            <string>Оператор</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>f1j</string>
+           </property>
+          </column>
+         </widget>
+        </item>
+        <item>
+         <widget class="QTableWidget" name="operandsTable">
+          <column>
+           <property name="text">
+            <string>Операнд</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>f2i</string>
+           </property>
+          </column>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <widget class="QTextBrowser" name="programTextBrowser"/>
+      </item>
+     </layout>
+    </item>
+   </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>642</width>
      <height>23</height>
     </rect>
    </property>
